force-app/main/default/objects/Metadata_Snapshot__c/Metadata_Snapshot__c.object-meta.xml
<CustomObject>
    <description>Stores one metadata extraction or environment comparison snapshot.</description>
    <label>Metadata Snapshot</label>
    <nameField>
        <displayFormat>MS-{00000}</displayFormat>
        <label>Metadata Snapshot Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Metadata Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>