force-app/main/default/objects/Metadata_Snapshot__c/fields/Item_Count__c.field-meta.xml
<CustomField>
    <fullName>Item_Count__c</fullName>
    <label>Item Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>