force-app/main/default/objects/Metadata_Snapshot__c/fields/Snapshot_Key__c.field-meta.xml
<CustomField>
    <externalId>true</externalId>
    <fullName>Snapshot_Key__c</fullName>
    <label>Snapshot Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>