force-app/main/default/objects/Metadata_Snapshot__c/fields/Snapshot_Type__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Type__c</fullName>
    <label>Snapshot Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>