force-app/main/default/objects/Metadata_Snapshot__c/fields/Source_Org_Label__c.field-meta.xml
<CustomField>
    <fullName>Source_Org_Label__c</fullName>
    <label>Source Org Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>