force-app/main/default/objects/Metadata_Snapshot__c/fields/Target_Org_Label__c.field-meta.xml
<CustomField>
    <fullName>Target_Org_Label__c</fullName>
    <label>Target Org Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>